# Valuation-Agent-backend

./: .cursorrules  .deployment  .dockerignore  .gitignore  AZURE_DEPLOYMENT_GUIDE.md  AZURE_DEPLOYMENT_TROUBLESHOOTING.md  AZURE_ENV_SETUP.md  AZURE_MANUAL_FIX.md  AZURE_MONGODB_SETUP.md  Dockerfile  GITHUB_SECRETS_SETUP.md  GROQ_SETUP_GUIDE.md  MANUAL_DEPLOYMENT_GUIDE.md  Makefile  OLLAMA_SETUP.md  README.md  TOPIC_SPECIFIC_RETRIEVAL_SUMMARY.md  app.py  app_main.py  app_minimal.py  app_minimal_simple.py  app_pure_python.py  app_quantlib_simple.py  app_simple.py  app_simple_fastapi.py  app_simple_http.py  app_simple_startup.py  app_super_minimal.py  app_ultra_minimal.py  azure-setup.md  configure-azure-env.ps1  create_test_pdf.py  deploy-azure-cli.sh  deploy-azure.bat  deploy-azure.sh  deploy-minimal.bat  env.example  fix-app-service.ps1  fix-runtime.bat  fix_emojis.py  (+39 more)
.run/: audit.db
agents/: README.md  __init__.py  chat.py  contract_parser.py  pdf_processor.py  sample_contract.txt
app/: __init__.py  database.py  deps.py  main.py  main_azure.py  main_azure_simple.py  report_generator.py  settings.py
azure-functions/: __init__.py  function_app.py
docs/: IFRS-13_Compliance_Guide.md  README.md  SECURITY_PLAYBOOK.md  sample_policy.txt
eval/: adversarial.jsonl  run_eval.py  run_redteam.py
rag/: __init__.py  explanation_service.py  vector_store.py
routers/: agents.py  chat.py  curves.py  explanations.py  exports.py  metrics.py  runs.py  sensitivities.py
scripts/: poc_smoke_explain.py  poc_smoke_ifrs.py  poc_smoke_parse.py
sdk/: __init__.py  client.py  models.py
tests/: test_audit.py  test_feedback_checklist.py  test_guardrails.py  test_ifrs_rag.py  test_runs.py  test_security.py  (+2 more)
(+56 files in other folders)
